# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project tries to adhere to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [Unreleased]

## [0.0.1] - 2019-06-19

### Added
- Wed 19 Jun 2019 22:41:23 AEST
  Initial commit


## [0.0.2] - 2019-06-20

### Added
- Thu 20 Jun 2019 20:52:43 AEST
  Added more packages and checking

### Changes
- Thu 20 Jun 2019 20:52:43 AEST
  Bug fixes

## [0.0.3] - 2019-06-20

### Added
- Thu 20 Jun 2019 23:13:28 AEST
  Added help and version information

### Changed
- Thu 20 Jun 2019 23:13:28 AEST
  Split code into subroutines

## [0.0.4] - 2019-06-21

### Changed
- Fri 21 Jun 2019 05:52:09 AEST
  Bug fixes and cleanup

## [0.0.5] - 2019-06-21

### Added

- Fri 21 Jun 2019 09:13:48 AEST
  Added google noto fonts option
  
## [0.0.6] - 2019-06-26

### Added

- Wed 26 Jun 2019 08:25:24 AEST
  Added /usr/local/bin and /usr/local/sbin to PATH

## [0.0.7] - 2019-06-29

### Changed
- Sat 29 Jun 2019 22:28:35 AEST
  Improved rbenv and pyenv install

## [0.0.7] - 2019-06-30

### Changed
- Sun 30 Jun 2019 09:21:09 AEST
  Fixed bugs with shell routine
  